Details
Description
When playing audio in any program for a while (after applying the change mentioned in https://jira.reactos.org/browse/CORE-13202?focusedCommentId=124755&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-124755), "MDL PROBE FAILED!" is shown in the debug output followed by the program crashing with the assertion being "Assertion failed: (Mdl->MdlFlags & MDL_PAGES_LOCKED) != 0". I am attaching the resolved debug log that I made.
Attachments
Issue Links
- relates to
-
CORE-13202 Unhandled exception from wdmaud.drv when recording sound in Scratch 1.4 leads to app-crash
-
- Resolved
-