dll/win32/wdmaud.drv/wdmaud.c
@@ -18,6 +18,7 @@
 #include <debug.h>
 #include <mmebuddy_debug.h>
 
+#define USE_MMIXER_LIB
 #ifndef USE_MMIXER_LIB
 #define FUNC_NAME(x) x##ByLegacy
 #else
